-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0
-
None
-
f95fdacb3a12e4f0d37d3c32b34326f2bd1536de
Launch a quick controls demo app (e.g. gallery), open a menu popup, then close it.
libEGL debug: EGL user error 0x3009 (EGL_BAD_MATCH) in eglMakeCurrent
QEGLPlatformContext::makeCurrent: eglError: 3009, this: 0x20702b0
Scene Graph failed to acquire GL context during cleanup
and then it hangs.
- replaces
-
QTBUG-35434 Android: Qt Quick apps freeze when hitting Back button
-
- Closed
-
| For Gerrit Dashboard: QTBUG-35410 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 73348,2 | Set the format for the fallback offscreen surface | release | qt/qtdeclarative | Status: MERGED | +2 | 0 |