Set the format for the fallback offscreen surface

Ie76dbe5fd4ab935db3da34f3ff63d217a3ba5013 fails to set the format
for the QOffscreenSurface, resulting in BAD_MATCH failures when trying
to make it current.

Task-number: QTBUG-35410
Change-Id: I1d420556fad4df96a1893cb3513e398eeb6e71aa
Reviewed-by: Lars Knoll <lars.knoll@digia.com>